--- a/vivaldi-vh.scss
+++ b/vivaldi-vh.scss
@@ -23,6 +23,7 @@
   @include grid-items.bookmark-bar-styles;
   @include grid-items.panel-styles;
   @include grid-items.status-bar-styles;
+  @include grid-items.tab-bar-styles;
   @include grid-items.webpage-styles;
 
   @include toolbar-components.address-field-styles;
